# Relaxe

./: CMakeLists.txt  README.md
include/: VideoManager.hh  VideoPlayer.hh
src/: VideoManager.cpp  VideoPlayer.cpp  main.cpp
